# sfkit

./: .dockerignore  .dockstore.yml  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  encrypt_data.py  generate_personal_keys.py  install.sh  poetry.toml  publish_release.sh  pyinstaller.spec  pyproject.toml  pytest.ini  random_number_generator.py  requirements.txt  requirements2.txt  run.py  setup.cfg  workflow.wdl
.github/workflows/: build_publish.yml  build_publish_github.yml  build_publish_pypi.yml  build_publish_terra.yml  codeql.yaml  container.yml  run_pytest.yml
docs/: conf.py  index.rst
docs/source/: api.rst  commands.rst  conf.py  index.rst  installation.rst  tutorial.rst  tutorial_2.rst  usage.rst  workflows.rst
docs/source/_static/: custom.css
sfkit/: api.py  cli.py  parser.py
sfkit/auth/: auth.py  setup_networking.py
sfkit/encryption/mpc/: encrypt_data.py  random_number_generator.py
sfkit/protocol/: register_data.py  run_protocol.py
sfkit/sidecar/: client.py  server.py  utils.py
sfkit/utils/: client_server.py  constants.py  gwas_protocol.py  helper_functions.py  pca_protocol.py  sfgwas_helper_functions.py  sfgwas_protocol.py  sfrelate_helper_functions.py  sfrelate_protocol.py
src/sfkit/: api.py  cli.py  parser.py
src/sfkit/auth/: auth.py  set_study.py  setup_networking.py
src/sfkit/encryption/: generate_personal_keys.py
src/sfkit/encryption/mpc/: encrypt_data.py  random_number_generator.py
src/sfkit/encryption/mpc/test_data/input_data1/: pheno.txt
src/sfkit/encryption_keys/: encrypt_data.py  generate_personal_keys.py  generate_shared_key.py
src/sfkit/encryption_keys/test_data/input_data2/: cov.txt  geno.txt
src/sfkit/protocol/: register_data.py  run_protocol.py
src/sfkit/protocol/utils/: constants.py  gwas_protocol.py  helper_functions.py  pca_protocol.py  sfgwas_protocol.py  startup-script.sh
src/sfkit/utils/: gwas_protocol.py
src/sftools/: cli.py
src/sftools/auth/: auth.py  set_study.py  setup_networking.py
src/sftools/encryption_keys/: encrypt_data.py  generate_personal_keys.py  random_number_generator.py
src/sftools/encryption_keys/test_data/input_data1/: geno.txt
src/sftools/protocol/: register_data.py  run_protocol.py  validate_data.py
src/sftools/protocol/utils/: constants.py  google_cloud_compute.py  google_cloud_iam.py  google_cloud_pubsub.py  google_cloud_storage.py  helper_functions.py  sfgwas_protocol.py  startup-script.sh  utils.py
test_data/input_data1/: cov.txt
test_data/input_data2/: pheno.txt
tests/: helper_functions_and_constants.py  test_api.py  test_cli.py  test_parser.py
tests/auth/: test_auth.py  test_setup_networking.py
tests/encryption/: test_generate_personal_keys.py
tests/encryption/mpc/: test_encrypt_data.py  test_random_number_generator.py
tests/protocol/: test_register_data.py  test_run_protocol.py
tests/utils/: test_gwas_protocol.py  test_helper_functions.py  test_pca_protocol.py  test_sfgwas_helper_functions.py  test_sfgwas_protocol.py
