[project]
name = "sfkit"
version = "0.0.237"
authors = [{ name = "Simon Mendelsohn", email = "smendels@broadinstitute.org" }]
description = "Some CLI Tools For The Secure Multi-party Genomic Analysis Website"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'bs4',
  'checksumdir',
  'google-auth',
  'google-cloud-storage',
  'ipaddr',
  'matplotlib',
  'numpy',
  'pandas',
  'PyNaCl',
  'qmplot',
  'requests[socks]',
  'scipy',
  'setuptools',
  'tomlkit',
  'tqdm',
]

[project.optional-dependencies]
dev = ['black', 'flake8', 'pytest-mock']
doc = [
  'sphinx-argparse',
  'sphinx-copybutton',
  'sphinx-inline-tabs',
  'sphinx-rtd-theme',
]

[project.scripts]
sfkit = "sfkit.cli:main"

[project.urls]
"Website" = "https://sfkit.org/"
"Github" = "https://github.com/hcholab/sfkit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sfkit"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.pytest.ini_options]
pythonpath = [".", "sfkit", "tests"]
