[project]
name = "sfkit"
version = "0.0.238"
authors = [{ name = "Simon Mendelsohn", email = "smendels@broadinstitute.org" }]
description = "Some CLI Tools For The Secure Multi-party Genomic Analysis Website"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'beautifulsoup4==4.12.2',
  'checksumdir==1.2.0',
  'google-auth==2.23.4',
  'google-cloud-storage==2.13.0',
  'ipaddr==2.2.0',
  'matplotlib==3.8.1',
  'numpy==1.26.1',
  'pandas==2.1.2',
  'PyNaCl==1.5.0',
  'qmplot==0.3.2',
  'requests[socks]==2.31.0',
  'scipy==1.11.3',
  'setuptools==68.2.2',
  'tomlkit==0.12.1',
  'tqdm==4.66.1',
]

[project.optional-dependencies]
dev = ['black==23.10.1', 'flake8==6.1.0', 'pytest-mock==3.12.0']
doc = [
  'sphinx-argparse==0.4.0',
  'sphinx-copybutton==0.5.2',
  'sphinx-inline-tabs==2023.4.21',
  'sphinx-rtd-theme==1.3.0',
]

[project.scripts]
sfkit = "sfkit.cli:main"

[project.urls]
"Website" = "https://sfkit.org/"
"Github" = "https://github.com/hcholab/sfkit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sfkit"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.pytest.ini_options]
pythonpath = [".", "sfkit", "tests"]
