[tool.poetry]
name = "sfkit"
version = "0.0.239"
authors = ["Simon Mendelsohn <smendels@broadinstitute.org>"]
description = "Some CLI Tools For The Secure Multi-party Genomic Analysis Website"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
beautifulsoup4 = "^4.12.2"
checksumdir = "^1.2.0"
google-auth = "^2.23.4"
google-cloud-storage = "^2.13.0"
ipaddr = "^2.2.0"
matplotlib = "^3.8.1"
numpy = "^1.26.1"
pandas = "^2.1.2"
PyNaCl = "^1.5.0"
qmplot = "^0.3.2"
requests = {extras = ["socks"], version = "^2.31.0"}
setuptools = "^68.2.2"
scipy = "^1.11.3"
tomlkit = "^0.12.2"
tqdm = "^4.66.1"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[tool.poetry.group.doc.dependencies]
sphinx-argparse = "^0.4.0"
sphinx-copybutton = "^0.5.2"
sphinx-inline-tabs = "^2023.4.21"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.scripts]
sfkit = "sfkit.cli:main"

[tool.poetry.urls]
"Website" = "https://sfkit.org/"
"Github" = "https://github.com/hcholab/sfkit"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.pytest.ini_options]
pythonpath = [".", "sfkit", "tests"]

