[metadata]
name = sftools
version = 0.0.15
author = Simon Mendelsohn
author_email = simonjmendelsohn@gmail.com
description = Some CLI Tools For The Secure Multi-party Genomic Analysis Website
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simonjmendelsohn/secure-gwas-keys-and-encryption
project_urls = 
    Website = https://secure-gwas-website-bhj5a4wkqa-uc.a.run.app/
classifiers = 
    Programming Language :: Python :: 3 
    License :: OSI Approved :: MIT License 
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    black
    google-api-python-client
    google-cloud-firestore
    google-cloud-pubsub
    google-cloud-storage
    ipaddr
    PyNaCl
    tenacity
    tqdm

[options.entry_points]
console_scripts = 
    sftools = sftools.cli:main

[options.packages.find]
where = src
